--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <html>
 <style>
     body {
-       background-image: url("wallpaper.jpg");
+       background-image: url("img/wallpaper.jpg");
        background-position: center;
        background-size: cover;
    }
